# cart-compass

./: .gitignore  docker-compose.yml
.devcontainer/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/scraper/: devcontainer.json
backend/: Dockerfile  README.md  pom.xml
backend/src/main/java/com/cart_compass/: CartCompassApplication.java
backend/src/main/java/com/cart_compass/config/: DynamoDbConfig.java
backend/src/main/java/com/cart_compass/controller/: CompareController.java  DefaultController.java  ProductController.java  SearchController.java  SupermarketController.java
backend/src/main/java/com/cart_compass/model/: Product.java
backend/src/main/java/com/cart_compass/service/: ProductService.java  ScraperService.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/cart_compass/: CartCompassApplicationTests.java
docker/dynamodb/: shared-local-instance.db
frontend/: components.json  package-lock.json  package.json  tsconfig.json
frontend/src/: App.js
frontend/src/api/: grocery.js
frontend/src/components/: ShoppingList.js
frontend/src/components/ui/: List.jsx  ListItem.jsx  button.tsx  card.tsx  input.tsx
frontend/src/styles/: globals.css
scraper/: Dockerfile  README.md  __main__.py  pyproject.toml
scraper/scraper/: DynamoDBClient.py  Settings.py  __main__.py  seed.py
