[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Aearsears <53102185+Aearsears@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.36.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
