[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Aearsears <53102185+Aearsears@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.36.8"
pydantic = "^2.10.6"
pytest-playwright = "^0.6.2"
pydantic-settings = "^2.7.1"
tldextract = "^5.1.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
